apply graphviz-python_version.patch from 'phisama'

--- a/configure.ac
+++ b/configure.ac
@@ -1137,7 +1137,7 @@ else
       if test "x$PYTHON" == "x"; then
         use_python="No (python not available)"
       else
-        PYTHON_VERSION=`$PYTHON -V 2>&1 | $EGREP Python | cut -d ' ' -f 2`
+        PYTHON_VERSION=`$PYTHON -c "import sys; print '%d.%d' % (sys.version_info[[0:2]])"`
         if test "x$PYTHON_VERSION" == "x"; then
           PYTHON=
         else
