--- a/configure.ac
+++ b/configure.ac
@@ -798,10 +798,10 @@ else
       else
         for try_java_include in \
           /System/Library/Frameworks/JavaVM.framework/Headers \
-          /usr/lib/jvm/java/include \
-          /usr/lib/jvm/java/include/linux \
-          /usr/lib/jvm/default-java/include \
-          /usr/lib/jvm/default-java/include/linux \
+          /usr/lib${LIBPOSTFIX}/jvm/java/include \
+          /usr/lib${LIBPOSTFIX}/jvm/java/include/linux \
+          /usr/lib${LIBPOSTFIX}/jvm/default-java/include \
+          /usr/lib${LIBPOSTFIX}/jvm/default-java/include/linux \
           /etc/java-config-2/current-system-vm/include \
           /etc/java-config-2/current-system-vm/include/linux \
           /etc/java-config-2/current-system-vm/include/freebsd
