Add new gvpr scripts

--- a/cmd/gvpr/lib/Makefile.am
+++ b/cmd/gvpr/lib/Makefile.am
@@ -3,8 +3,8 @@
 
 gvprdir = $(pkgdatadir)/gvpr
 
-gvpr_DATA = addranks addrings anon attr bb bbox \
-	cliptree col collapse color dechain deghist \
+gvpr_DATA = addranks addrings anon attr bb bbox chkclusters \
+	cliptree col collapse color cycle dechain deghist \
 	deledges delmulti delnodes depath dijkstra \
 	flatten get-layers-list group indent knbhd \
 	maxdeg path rotate scale scalexy span topon \
