--- a/plugin/core/Makefile.am
+++ b/plugin/core/Makefile.am
@@ -1,18 +1,12 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-if WITH_CGRAPH
-GRAPH = cgraph
-else
-GRAPH = graph
-endif
-
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/pathplan \
 	-I$(top_srcdir)/lib/gvc \
-	-I$(top_srcdir)/lib/$(GRAPH) \
+	-I$(top_srcdir)/lib/cgraph \
 	-I$(top_srcdir)/lib/cdt \
 	$(LIBGVC_CFLAGS)
 
@@ -40,7 +34,7 @@ libgvplugin_core_C_la_SOURCES = \
 libgvplugin_core_la_LDFLAGS = -version-info @GVPLUGIN_VERSION_INFO@
 libgvplugin_core_la_SOURCES = $(libgvplugin_core_C_la_SOURCES)
 libgvplugin_core_la_LIBADD = $(top_builddir)/lib/gvc/libgvc.la \
-				$(top_builddir)/lib/$(GRAPH)/lib$(GRAPH).la \
+				$(top_builddir)/lib/cgraph/libcgraph.la \
 				$(top_builddir)/lib/cdt/libcdt.la
 
 gvrender_core_ps.o gvrender_core_ps.lo: ps.h
@@ -50,7 +44,7 @@ ps.h : $(srcdir)/ps.txt
 
 if WITH_WIN32
 libgvplugin_core_la_LDFLAGS += -no-undefined
-libgvplugin_core_la_LIBADD += $(top_builddir)/lib/$(GRAPH)/lib$(GRAPH).la
+libgvplugin_core_la_LIBADD += $(top_builddir)/lib/cgraph/libcgraph.la
 endif
 
 if WITH_DARWIN9
