--- a/plugin/visio/Makefile.am
+++ b/plugin/visio/Makefile.am
@@ -1,18 +1,12 @@
 # $Id: Makefile.am,v 1.3 2009/06/03 01:10:57 ellson Exp $ $Revision: 1.3 $
 ## Process this file with automake to produce Makefile.in
 
-if WITH_CGRAPH
-GRAPH = cgraph
-else
-GRAPH = graph
-endif
-
 AM_CPPFLAGS = \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/pathplan \
 	-I$(top_srcdir)/lib/gvc \
-	-I$(top_srcdir)/lib/$(GRAPH) \
+	-I$(top_srcdir)/lib/cgraph \
 	-I$(top_srcdir)/lib/cdt \
 	$(VISIO_CFLAGS) 
 
