remove CGRAPH conditionals from lib/*

--- a/lib/pack/Makefile.am
+++ b/lib/pack/Makefile.am
@@ -4,18 +4,12 @@
 pdfdir = $(pkgdatadir)/doc/pdf
 #pkgconfigdir = $(libdir)/pkgconfig
 
-if WITH_CGRAPH
-GRAPH = cgraph
-else
-GRAPH = graph
-endif
-
 AM_CPPFLAGS = -I$(top_srcdir) \
         -I$(top_srcdir)/lib/common \
 	-I$(top_srcdir)/lib/gvc \
 	-I$(top_srcdir)/lib/neatogen \
 	-I$(top_srcdir)/lib/pathplan \
-	-I$(top_srcdir)/lib/$(GRAPH) \
+	-I$(top_srcdir)/lib/cgraph \
 	-I$(top_srcdir)/lib/cdt
 
 if WITH_WIN32
