--- a/lib/ingraphs/Makefile.am
+++ b/lib/ingraphs/Makefile.am
@@ -1,15 +1,9 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-if WITH_CGRAPH 
-GRAPH = cgraph 
-else 
-GRAPH = graph 
-endif 
-
 AM_CPPFLAGS = \
         -I$(top_srcdir) \
-        -I$(top_srcdir)/lib/$(GRAPH) \
+        -I$(top_srcdir)/lib/cgraph \
 	-I$(top_srcdir)/lib/cdt 
 
 noinst_HEADERS = ingraphs.h 
