--- a/cmd/gvedit/Makefile.am
+++ b/cmd/gvedit/Makefile.am
@@ -1,12 +1,6 @@
 # $Id$ $Revision$
 ## Process this file with automake to produce Makefile.in
 
-if WITH_CGRAPH
-GRAPH = cgraph
-else
-GRAPH = graph
-endif
-
 SUBDIRS = ui images
 
 pdfdir = $(pkgdatadir)/doc/pdf
@@ -23,7 +17,7 @@ AM_CPPFLAGS = \
         -I$(top_srcdir)/lib/common \
         -I$(top_srcdir)/lib/gvc \
         -I$(top_srcdir)/lib/pathplan \
-        -I$(top_srcdir)/lib/$(GRAPH) \
+        -I$(top_srcdir)/lib/cgraph \
         -I$(top_srcdir)/lib/cdt
 
 gvedit_CPPFLAGS = \
