try building -docs and -graphs as noarch on rhel

--- a/graphviz.spec.in
+++ b/graphviz.spec.in
@@ -786,6 +786,9 @@ Summary:        Demo graphs for graphviz
 %if 0%{?fedora} >= 11
 BuildArch: noarch
 %endif
+%if 0%{?rhel} >= 5
+BuildArch: noarch
+%endif
 
 %description graphs
 Some demo graphs for graphviz.
@@ -803,6 +806,9 @@ Some demo graphs for graphviz.
 Group:          Documentation
 Summary:        PDF and HTML documents for graphviz
 %if 0%{?fedora} >= 11
+BuildArch: noarch
+%endif
+%if 0%{?rhel} >= 5
 BuildArch: noarch
 %endif
 
