--- a/lib/common/types.h.in
+++ b/lib/common/types.h.in
@@ -42,7 +42,7 @@ extern "C" {
     typedef int (*qsort_cmpf) (const void *, const void *);
     typedef int (*bsearch_cmpf) (const void *, const void *);
 
-#include <cgraph.h>
+#include "cgraph.h"
     typedef struct Agraph_s graph_t;
     typedef struct Agnode_s node_t;
     typedef struct Agedge_s edge_t;
