rename "para" -> "span".  A string in a single font <= 1 line

--- a/lib/common/Makefile.am
+++ b/lib/common/Makefile.am
@@ -19,7 +19,7 @@ endif
 
 BUILT_SOURCES = colortbl.h ps_font_equiv.h htmlparse.h
 
-pkginclude_HEADERS = arith.h geom.h color.h types.h textpara.h usershape.h
+pkginclude_HEADERS = arith.h geom.h color.h types.h textspan.h usershape.h
 noinst_HEADERS = render.h utils.h memory.h \
 	geomprocs.h colorprocs.h colortbl.h entities.h globals.h \
 	logic.h const.h macros.h htmllex.h htmltable.h pointset.h intset.h
